src/objects/ExperiencePackage_App__c.object
<CustomObject>
    <description>Junction object for ExperiencePackage and Applications</description>
    <fields>
        <fullName>AppCurrRoyalty__c</fullName>
        <formula>Application__r.Royalty_Current__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AppCurrRoyalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Experience Packages</relationshipLabel>
        <relationshipName>ExperiencePackage_Apps</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Experience_Package__c</fullName>
        <label>Experience Package</label>
        <referenceTo>ExperiencePackage__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>ExperiencePackage_Apps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Royalty_Current__c</fullName>
        <label>Royalty Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>ExperiencePackage_App</label>
    <nameField>
        <displayFormat>ExpPck_App-{000000}</displayFormat>
        <label>ExperiencePackage_App Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ExperiencePackage_Apps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>